--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 API_BASE_URL=https://jsonplaceholder.cypress.io
 WEB_BASE_URL=https://www.bukalapak.com/
-WEB_USERNAME=bukalapak.chris@gmail.com
+WEB_USERNAME=testerbuka@gmail.com
 WEB_PASSWORD=Tobasa@2022
+PRODUCT_NAME=Sepatu
