Update for Simpli

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 API_BASE_URL=https://jsonplaceholder.cypress.io
-WEB_BASE_URL=https://www.bukalapak.com/
-WEB_USERNAME=testerbuka@gmail.com
-WEB_PASSWORD=Tobasa@2022
+WEB_BASE_URL=https://my.simplidots.co.id/
+WEB_USERNAME=chris_simplidots
+WEB_PASSWORD=12345678
 PRODUCT_NAME=Sepatu
+quantity_product=5
